Moving styles in style behind (isolation) to prevent overriding Mud styles.

--- a/Savitar.WebAssembly/wwwroot/css/app.css
+++ b/Savitar.WebAssembly/wwwroot/css/app.css
@@ -1,31 +1,4 @@
-﻿a {
-    color: gray !important;
-    text-decoration: underline !important;
-}
-
-ul {
-    list-style-type: disc;
-    list-style-position: inside;
-}
-
-ol {
-    list-style-type: decimal;
-    list-style-position: inside;
-}
-
-    ul ul, ol ul {
-        list-style-type: circle;
-        list-style-position: inside;
-        margin-left: 15px;
-    }
-
-    ol ol, ul ol {
-        list-style-type: lower-latin;
-        list-style-position: inside;
-        margin-left: 15px;
-    }
-
-.spinner {
+﻿.spinner {
     border: 16px solid silver;
     border-top: 16px solid #337AB7;
     border-radius: 50%;
